# rock

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  analyze_position.cpp  main.cpp  play_against_other.cpp  python_bindings.cpp
include/rock/: algorithms.h  common.h  fen.h  format.h  game.h  parse.h  starting_board.h  starting_position.h  types.h
scripts/: play_game.py
src/: CMakeLists.txt  algorithms.cpp  bit_operations.h  diagnostics.h  fen.cpp  format.cpp  game.cpp  internal_types.h  parse.cpp  table_generation.h  transposition_table.h  types.cpp
src/internal/: bit_operations.h  diagnostics.h  evaluate.h  internal_types.cpp  internal_types.h  move_generation.h  search.h  table_generation.h  transposition_table.h
test/: CMakeLists.txt  doctest_formatting.h  example_boards.h  perf_test.cpp  test_move_gen_speed.cpp  test_move_recommend_speed.cpp  test_parse.cpp
test/performance/: analyze_position.cpp  common.h  count_moves.cpp
test/unit_testing/: test_move_generation.cpp  test_parse.cpp
